--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -1,10 +1,8 @@
 ---
 layout: default
 img: dog.png
-category: Services
-title: 3D Device Mockups<br>by PSDCovers
+category: Features
+title: 仲間・実践者との出会いの場
 description: |
 ---
-  Turn your 2D designs into high quality, 3D
-  product shots in seconds using free Photoshop actions by [PSDCovers](http://www.psdcovers.com/)! Visit
-  their website to download some of their awesome, free photoshop actions!
+「健康について不安を抱えてはいるが、どこからはじめていいかわからない」。自分一人ではなかなか一歩を踏み出すきっかけがないものです。本カンファレンスでは**同じような悩みを抱えている人、既に実践している人と直接出会う場を提供します**。
