--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: ipad.png
 category: Features
-title: 明日から実践できる情報が手に入る！
+title: 頭で体験：ヘルスハック実践者の体験談
 description: |
 ---
   ハックとは自分で考え、試行錯誤しながら、改善すること。**参加者自身が明日から健康増進するための実践的な情報・行動のヒントを提供します**。
