--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -2,7 +2,8 @@
 layout: default
 img: dog.png
 category: Features
-title: 仲間・実践者との出会いの場
+title: 身体で体験：野外アクティビティ体験
 description: |
 ---
-「健康について不安を抱えてはいるが、どこからはじめていいかわからない」。自分一人ではなかなか一歩を踏み出すきっかけがないものです。本カンファレンスでは**同じような悩みを抱えている人、既に実践している人と直接出会う場を提供します**。
+単に話を聞いたり、知識を得るだけなら、ネットでも自宅でもできます。本カンファレンスでは**実際に身体を動かす体験**を提供します！
+
