--- a/_posts/2014-09-23-services-3.markdown
+++ b/_posts/2014-09-23-services-3.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: phones.png
 category: Features
-title: 頭と身体で体験
+title: 五感で体験：自然と地元食材
 description: |
 ---
-たとえ知識を得ても、それを実際に実践し体験しなければ本当の意味での変化には繋がりません。本カンファレンスでは、知識を得ること以上に、**実際に体験をして・やってみた結果を持ち帰ってもらいます**。
+山、海の美しい風景、緑や潮の匂い、松山の地元食材を使った料理、心地よい風・・・**五感のすべてを総動員したヘルスハック体験！！**
