Modify for publishing.

--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-img: ipad.png
+img: folks.png
 category: Features
-title: 頭で体験：ヘルスハック実践者の体験談
+title: 実践者の体験談＆出会いの場
 description: |
 ---
-  ハックとは自分で考え、試行錯誤しながら、改善すること。**参加者自身が明日から健康増進するための実践的な情報・行動のヒントを提供します**。
+ハックとは自分で考え、試行錯誤しながら、実践し改善することです。ヘルスハックの実践者の体験談・出会いの場があなたを待っています！
