--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -1,9 +1,9 @@
 ---
 layout: default
-img: dog.png
+img: activity.png
 category: Features
-title: 身体で体験：野外アクティビティ体験
+title: アクティビティを体験
 description: |
 ---
-単に話を聞いたり、知識を得るだけなら、ネットでも自宅でもできます。本カンファレンスでは**実際に身体を動かす体験**を提供します！
+都市と自然が共生する愛媛県松山市。本イベントは利便性の高い中心地での開催でありながら、自然の中で身体を動かすアクティビティをも同時に体験できます！
 
