--- a/_posts/2016-01-12-news-1.markdown
+++ b/_posts/2016-01-12-news-1.markdown
@@ -5,4 +5,4 @@ category: News
 title: サイト公開
 description: |
 ---
-  2016/01/16 ヘルスハックカンファレンス@MYJの告知サイトを公開しました。
+  2016/01/18 ヘルスハックカンファレンスのサイトを公開しました。
