--- a/_posts/2014-09-23-services-3.markdown
+++ b/_posts/2014-09-23-services-3.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-img: phones.png
+img: body.png
 category: Features
-title: 五感で体験：自然と地元食材
+title: 五感で体験
 description: |
 ---
-山、海の美しい風景、緑や潮の匂い、松山の地元食材を使った料理、心地よい風・・・**五感のすべてを総動員したヘルスハック体験！！**
+山・海の風景、潮の匂い、地元食材を使った料理、各所に湧き出る温泉・・・頭や身体だけでなく五感のすべてを総動員した体験があなたを待っています！
