--- a/_posts/2016-01-13-about.markdown
+++ b/_posts/2016-01-13-about.markdown
@@ -21,4 +21,6 @@ description: |
 
 よい仕事をするため、いきいきとした人生を送るためには、**自ら健康の重要性に目を向け、日常的に実践しなければならない時代なのです。**
 
-本カンファレンスは、自分の力で心身ともに健康な人生を送るために健康をハック(工夫し改善する)する**ヘルスハッカー**に変わるためのカンファレンスです。
+しかもその実践とは、悲壮感漂いながら仕方なく行うのではなく、**楽しく歓びに満ち溢れなくてはなりません**。
+
+本カンファレンスは、自分の力で心身ともに健康な人生を送るため、日々楽しみながら健康をハック(工夫し改善する)する**ヘルスハッカー**に変わるためのきっかけの場なのです。
