Add recent news. Modify feature contents.

--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: folks.png
 category: Features
-title: 実践者の体験談＆出会いの場
+title: 頭
 description: |
 ---
-ハックとは自分で考え、試行錯誤しながら、実践し改善することです。ヘルスハックの実践者の体験談・出会いの場があなたを待っています！
+ハックとは自分で考え、試行錯誤しながら、実践し改善することです。ヘルスハックの実践者の体験談・出会いの場があなたを待っています。
