--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -1,9 +1,9 @@
 ---
 layout: default
-img: activity.png
+img: body.png
 category: Features
-title: アクティビティを体験
+title: 身体
 description: |
 ---
-都市と自然が共生する愛媛県松山市。本イベントは利便性の高い中心地での開催でありながら、自然の中で身体を動かすアクティビティをも同時に体験できます！
+都市と自然が共生する愛媛県松山市。本イベントでは自然の中で身体を動かすアクティビティをも同時に体験できます。
 
