--- a/_posts/2014-09-23-services-3.markdown
+++ b/_posts/2014-09-23-services-3.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-img: body.png
+img: activity.png
 category: Features
-title: 五感で体験
+title: 五感
 description: |
 ---
-山・海の風景、潮の匂い、地元食材を使った料理、各所に湧き出る温泉・・・頭や身体だけでなく五感のすべてを総動員した体験があなたを待っています！
+山・海の風景、離島への上陸、潮の匂い、地元食材を使った料理、各所に湧き出る温泉・・・五感で感じてください。都会では体験できない非日常空間があなたを待っています！
