--- a/_posts/2016-01-20-news-2.markdown
+++ b/_posts/2016-01-20-news-2.markdown
@@ -7,7 +7,7 @@ description: |
 ---
 2016/01/20
 
-ヘルスハックカンファレンスには、東京で開催された[ヘルシープログラマ出版記念イベント](http://connpass.com/event/18312/)と同様に、お二人をお招きます。
+ヘルスハックカンファレンスには、東京で開催された[ヘルシープログラマ出版記念イベント](http://connpass.com/event/18312/)でも講演されたお二人をお招きます。
 
 -「ヘルシープログラマ・翻訳、そして実践」Sky株式会社 玉川竜司さま
 
