Modify to start entering

--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: folks.png
 category: Features
-title: 頭
+title: 実践的な工夫を共有
 description: |
 ---
-ハックとは自分で考え、試行錯誤しながら、実践し改善することです。ヘルスハックの実践者の体験談・出会いの場があなたを待っています。
+ハックとは自分で考え、試行錯誤しながら実践し改善し続けることです。ヘルスハックの様々な実践者の体験談を聞き、これから始めようとする仲間との出会いの場があなたを待っています。
