--- a/_posts/2014-09-23-services-3.markdown
+++ b/_posts/2014-09-23-services-3.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: activity.png
 category: Features
-title: 五感
+title: 五感で体験
 description: |
 ---
-山・海の風景、離島への上陸、潮の匂い、地元食材を使った料理、各所に湧き出る温泉・・・五感で感じてください。都会では体験できない非日常空間があなたを待っています！
+山・海の風景、離島への上陸、潮の匂い、地元食材を使った料理、各所に湧き出る温泉・・・身体によいことを全身の五感を総動員して感じてください。都会では体験できない非日常空間があなたを待っています。
