--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -2,8 +2,8 @@
 layout: default
 img: body.png
 category: Features
-title: 身体
+title: 身体で体験
 description: |
 ---
-都市と自然が共生する愛媛県松山市。本イベントでは自然の中で身体を動かすアクティビティをも同時に体験できます。
+本イベントは知識を得るだけでなく、自然の中で身体を動かすアクティビティも体験します。頭だけでなく身体全体でヘルスハックを感じてください。
 
