Add link, change order of presenter.

--- a/_posts/2016-01-30-contents.markdown
+++ b/_posts/2016-01-30-contents.markdown
@@ -28,12 +28,6 @@ description: |
 
 ## 登壇者紹介
 
-### 懸田剛
-
-![懸田](/img/kkd_profile.png "懸田")
-
-ゼンソー代表、Agile459代表、ヘルスハックカンファレンス発起人。2010年より東京から松山に移住し、アジャイル・スクラム、プロジェクトファシリテーション、パタン・ランゲージなどのスキルを活かし、顧客の現場で価値提供のための人づくり、仕組みづくり・文化づくりを支援している。
-
 ### 玉川竜司さん
 
 ![玉川さん](/img/tamagawa_profile.jpg "玉川さん")
@@ -44,21 +38,25 @@ description: |
 
 ![井原さん](/img/ihara_profile.jpg "井原さん")
 
-
-@ihara2525 　株式会社ビットジャーニー代表取締役。ヤフー株式会社にて開発部長を務めたのち、クックパッド株式会社の技術部長として技術力の向上やエンジニアの採用に従事、今日にいたる基礎をつくりあげる。2015年1月、株式会社ビットジャーニーを設立し、新規インターネットサービスを開発中。
+@ihara2525 　株式会社[ビットジャーニー](https://bitjourney.com/)代表取締役。ヤフー株式会社にて開発部長を務めたのち、クックパッド株式会社の技術部長として技術力の向上やエンジニアの採用に従事、今日にいたる基礎をつくりあげる。2015年1月、株式会社ビットジャーニーを設立し、新規インターネットサービスを開発中。
 
 ### 倉貫義人さん
 
 ![倉貫さん](/img/kuranuki_profile.jpg "倉貫さん")
 
+株式会社[ソニックガーデン](http://www.sonicgarden.jp/)代表取締役。月額定額＆成果契約という「納品のない受託開発」を展開し注目を集める。著書に『「納品」をなくせばうまくいく』『リモートチームでうまくいく』など。ブログ http://kuranuki.sonicgarden.jp/
 
-株式会社ソニックガーデン代表取締役。月額定額＆成果契約という「納品のない受託開発」を展開し注目を集める。著書に『「納品」をなくせばうまくいく』『リモートチームでうまくいく』など。ブログ http://kuranuki.sonicgarden.jp/
-
-### 宿里 洋平さん
+### 宿里洋平さん
 
 ![宿里さん](/img/yadosato_profile.jpg "宿里さん")
 
 楽天株式会社所属、現在ランキング国際対応のチームでビッグデータを扱っています。
+
+### 懸田 剛
+
+![懸田](/img/kkd_profile.png "懸田")
+
+ゼンソー代表、[Agile459](http://agile459.github.io)代表、ヘルスハックカンファレンス発起人。2010年より東京から松山に移住し、アジャイル・スクラム、プロジェクトファシリテーション、パタン・ランゲージなどのスキルを活かし、顧客の現場で価値提供のための人づくり、仕組みづくり・文化づくりを支援している。ブログは[いきてま＠えひめ](http://giantech.jp)。
 
 
 
