Add presentation title into profile.

--- a/_posts/2016-01-30-contents.markdown
+++ b/_posts/2016-01-30-contents.markdown
@@ -32,11 +32,26 @@ description: |
 
 ![玉川さん](/img/tamagawa_profile.jpg "玉川さん")
 
+#### 講演内容
+**「ヘルシープログラマ・翻訳、そして実践」**
+
+ヘルシープログラマ」の翻訳に至った経緯、そして翻訳しながら実践したことによる変化についてお話しします。
+
+#### プロフィール
+
 『ヘルシープログラマ』翻訳者。本業はソフト開発。新しい技術を日本の技術者に紹介することに情熱を傾けており、その手段として翻訳に取り組んでいる。
 
 ### 井原正博さん
 
 ![井原さん](/img/ihara_profile.jpg "井原さん")
+
+#### 講演内容
+
+**「走って良かった10のこと」**
+
+昨年8/25に行われたイベント[「ヘルシープログラマ！」](http://connpass.com/event/18312/)でお話させていただいた「走って良かった10のこと」、その後さらにレースを重ね若干バージョンアップした内容で、走ることの素晴らしさを改めてお伝えできればと思います。 
+
+#### プロフィール
 
 @ihara2525 　株式会社[ビットジャーニー](https://bitjourney.com/)代表取締役。ヤフー株式会社にて開発部長を務めたのち、クックパッド株式会社の技術部長として技術力の向上やエンジニアの採用に従事、今日にいたる基礎をつくりあげる。2015年1月、株式会社ビットジャーニーを設立し、新規インターネットサービスを開発中。
 
@@ -44,19 +59,40 @@ description: |
 
 ![倉貫さん](/img/kuranuki_profile.jpg "倉貫さん")
 
+#### 講演内容
+**「40代からの健康習慣 〜 リモートワークと健康」**
+
+経営者にとって最も重要な資質は何か。正しい決断をするために必要な要素の一つは、身体が健康であるということだと感じています。経営者としての仕事を続けて40代に入ってから、私が取組んでいる健康習慣と、それによって得られた効果についてお話しします。
+
+#### プロフィール
 株式会社[ソニックガーデン](http://www.sonicgarden.jp/)代表取締役。月額定額＆成果契約という「納品のない受託開発」を展開し注目を集める。著書に『「納品」をなくせばうまくいく』『リモートチームでうまくいく』など。ブログ http://kuranuki.sonicgarden.jp/
 
 ### 宿里洋平さん
 
 ![宿里さん](/img/yadosato_profile.jpg "宿里さん")
 
+#### 講演内容
+**「ハッカー視点で考える本当に体が求める食事と運動」**
+
+体と運動のロジックが分かれば、もう食事も運動も怖くない！運動と食事をトラッキングしたリアルバーンダウンチャート、心拍数の計測や実験を経て見つけ出した、本当に必要な食事と運動、その仕組みについてお話します。
+
+#### プロフィール
+
 楽天株式会社所属、現在ランキング国際対応のチームでビッグデータを扱っています。
 
 ### 懸田 剛
 
+#### 講演内容
+
 ![懸田](/img/kkd_profile.png "懸田")
 
+#### 講演内容
+
+**「ようこそヘルスハックカンファレンスへ！」**
+
+本カンファレンス開催に至った経緯、日程内容、登壇者についての説明をします。またランニング、スタンディングデスクを始めとする自身の３年以上にも渡る生活習慣の変化によって、何が変わってきたのかについても触れます。
+
+
+#### プロフィール
+
 ゼンソー代表、[Agile459](http://agile459.github.io)代表、ヘルスハックカンファレンス発起人。2010年より東京から松山に移住し、アジャイル・スクラム、プロジェクトファシリテーション、パタン・ランゲージなどのスキルを活かし、顧客の現場で価値提供のための人づくり、仕組みづくり・文化づくりを支援している。ブログは[いきてま＠えひめ](http://giantech.jp)。
-
-
-
