--- a/_posts/2016-01-13-about.markdown
+++ b/_posts/2016-01-13-about.markdown
@@ -5,9 +5,10 @@ category: About
 title: ヘルスハックカンファレンスとは？
 description: |
 ---
-**今、健康が最も熱い！！**
 
-「プログラマーはピザ・スナック、炭酸飲料・エナジードリンクを手元に日夜パソコンに向かう」
+**すべての人が、よい仕事・よい人生を送るために、一歩を踏み出し、健康をこの手でつかみとるきっかけを作る**
+
+プログラマーはピザ・スナック、炭酸飲料・エナジードリンクを手元に日夜パソコンに向かう」
 
 そのようなイメージを払拭する本が昨年夏に出版されました。
 
@@ -23,4 +24,19 @@ description: |
 
 しかもその実践とは、悲壮感漂いながら仕方なく行うのではなく、**楽しく歓びに満ち溢れなくてはなりません**。
 
-本カンファレンスは、自分の力で心身ともに健康な人生を送るため、日々楽しみながら健康をハック(工夫し改善する)する**ヘルスハッカー**に変わるためのきっかけの場なのです。
+なんとなく、心の奥では気づいていながらも、なかなか一歩を踏み出せないものです。
+
+そんなモヤモヤを吹き飛ばす
+
+かつてはあなたと同じように
+
+本カンファレンスは、自分の力で心身ともに健康な人生を送るため、日々楽しみながら健康をハック(工夫し改善する)する**ヘルスハッカー**に変わるためのきっかけの場です。
+
+四国近隣の方だけでなく、遠方の方にも考慮して宿泊も格安でご用意しております。
+
+是非とも足をお運びください。
+
+ヘルスハックカンファレンス発起人
+
+[懸田剛](http://twitter.com/kkd)
+
