--- a/_posts/2016-01-13-about.markdown
+++ b/_posts/2016-01-13-about.markdown
@@ -26,11 +26,7 @@ description: |
 
 なんとなく、心の奥では気づいていながらも、なかなか一歩を踏み出せないものです。
 
-そんなモヤモヤを吹き飛ばす
-
-かつてはあなたと同じように
-
-本カンファレンスは、自分の力で心身ともに健康な人生を送るため、日々楽しみながら健康をハック(工夫し改善する)する**ヘルスハッカー**に変わるためのきっかけの場です。
+そんなモヤモヤを吹き飛ばし一歩を踏み出すために、本カンファレンスは、自分の力で心身ともに健康な人生を送るため、日々楽しみながら健康をハック(工夫し改善する)する**ヘルスハッカー**に変わるためのきっかけを提供します。
 
 四国近隣の方だけでなく、遠方の方にも考慮して宿泊も格安でご用意しております。
 
