--- a/_posts/2016-01-13-about.markdown
+++ b/_posts/2016-01-13-about.markdown
@@ -6,7 +6,7 @@ title: ヘルスハックカンファレンスとは？
 description: |
 ---
 
-**すべての人が、よい仕事・よい人生を送るために、一歩を踏み出し、健康をこの手でつかみとるきっかけを作る**
+**なぜあなたは、仕事のことばかり考えて、一番大事な健康に目を向けないのか？**
 
 プログラマーはピザ・スナック、炭酸飲料・エナジードリンクを手元に日夜パソコンに向かう」
 
@@ -18,15 +18,19 @@ description: |
 
 <a rel="nofollow" href="http://www.amazon.co.jp/gp/product/4873117283/ref=as_li_ss_il?ie=UTF8&camp=247&creative=7399&creativeASIN=4873117283&linkCode=as2&tag=giantech-22"><img border="0" src="http://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=4873117283&Format=_SL250_&ID=AsinImage&MarketPlace=JP&ServiceVersion=20070822&WS=1&tag=giantech-22" ></a><img src="http://ir-jp.amazon-adsystem.com/e/ir?t=giantech-22&l=as2&o=9&a=4873117283" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 
-プログラマーだけでなく、現代人は様々な技術革新・社会システムによる利便性の獲得と相反するように、運動不足やジャンクフードに囲まれ、生活習慣病に怯える人が増えています。
-
-よい仕事をするため、いきいきとした人生を送るためには、**自ら健康の重要性に目を向け、日常的に実践しなければならない時代なのです。**
+よい仕事をするため、いきいきとした人生を送るためには、**自ら健康の重要性に目を向け、日常的に実践しなければならない時代です。**
 
 しかもその実践とは、悲壮感漂いながら仕方なく行うのではなく、**楽しく歓びに満ち溢れなくてはなりません**。
 
-なんとなく、心の奥では気づいていながらも、なかなか一歩を踏み出せないものです。
+ジムに通うのもいいでしょう、近所を走るのもいいでしょう、ダイエットするのもいいでしょう。
 
-そんなモヤモヤを吹き飛ばし一歩を踏み出すために、本カンファレンスは、自分の力で心身ともに健康な人生を送るため、日々楽しみながら健康をハック(工夫し改善する)する**ヘルスハッカー**に変わるためのきっかけを提供します。
+**とはいえ、なかなか一歩を踏み出せない、過去の失敗に懲りてしまった人もいるでしょう。**
+
+もうひとつ、気持ちが乗らない、そんなあなたにオススメなのが
+
+**既に健康に目覚めて、楽しく健康をハック（工夫し改善する）している人の話を聞くことです！！**
+
+そんな機会を提供します。
 
 四国近隣の方だけでなく、遠方の方にも考慮して宿泊も格安でご用意しております。
 
@@ -34,5 +38,5 @@ description: |
 
 ヘルスハックカンファレンス発起人
 
-[懸田剛](http://twitter.com/kkd)
+[懸田剛](http://about.me/kkd)
 
